Fix issues encountered with Visual Studio Code